--- a/yxdt/个人中心.html
+++ b/yxdt/个人中心.html
@@ -73,45 +73,53 @@
         <div id="u233_state0" class="panel_state" data-label="State1" style="">
           <div id="u233_state0_content" class="panel_state_content">
 
+            <!-- Unnamed (矩形) -->
+            <div id="u234" class="ax_default _默认样式">
+              <div id="u234_div" class=""></div>
+              <div id="u234_text" class="text ">
+                <p><span style="text-decoration:none;">个人信息</span></p>
+              </div>
+            </div>
+
             <!-- Unnamed (返回按钮) -->
 
             <!-- Unnamed (矩形) -->
-            <div id="u235" class="ax_default _默认样式">
-              <div id="u235_div" class=""></div>
-              <div id="u235_text" class="text ">
+            <div id="u236" class="ax_default _默认样式">
+              <div id="u236_div" class=""></div>
+              <div id="u236_text" class="text ">
                 <p><span style="text-decoration:none;">返回</span></p>
               </div>
             </div>
-            <div id="u234" style="display:none; visibility:hidden;"></div>
+            <div id="u235" style="display:none; visibility:hidden;"></div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u236" class="ax_default _二级标题">
-              <div id="u236_div" class=""></div>
-              <div id="u236_text" class="text ">
+            <div id="u237" class="ax_default _二级标题">
+              <div id="u237_div" class=""></div>
+              <div id="u237_text" class="text ">
                 <p><span style="text-decoration:none;">个人中心</span></p>
               </div>
             </div>
 
             <!-- Unnamed (圆形) -->
-            <div id="u237" class="ax_default ellipse">
-              <img id="u237_img" class="img " src="images/个人中心/u237.svg"/>
-              <div id="u237_text" class="text ">
+            <div id="u238" class="ax_default ellipse">
+              <img id="u238_img" class="img " src="images/个人中心/u238.svg"/>
+              <div id="u238_text" class="text ">
                 <p><span style="text-decoration:none;">头像</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u238" class="ax_default link_button">
-              <div id="u238_div" class=""></div>
-              <div id="u238_text" class="text ">
-                <p><span style="text-decoration:none;">更换</span></p>
+            <div id="u239" class="ax_default link_button">
+              <div id="u239_div" class=""></div>
+              <div id="u239_text" class="text ">
+                <p><span style="text-decoration:none;">更换头像</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u239" class="ax_default label">
-              <div id="u239_div" class=""></div>
-              <div id="u239_text" class="text ">
+            <div id="u240" class="ax_default label">
+              <div id="u240_div" class=""></div>
+              <div id="u240_text" class="text ">
                 <p><span style="text-decoration:none;">名称</span></p>
               </div>
             </div>
@@ -119,45 +127,77 @@
             <!-- Unnamed (个人中心导航) -->
 
             <!-- Unnamed (矩形) -->
-            <div id="u241" class="ax_default _默认样式" selectiongroup="u240二级菜单">
-              <div id="u241_div" class=""></div>
-              <div id="u241_text" class="text ">
+            <div id="u242" class="ax_default _默认样式" selectiongroup="u241二级菜单">
+              <div id="u242_div" class=""></div>
+              <div id="u242_text" class="text ">
                 <p><span style="text-decoration:none;">个人中心</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u242" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u240二级菜单" style="display:none; visibility: hidden">
-              <div id="u242_div" class=""></div>
-              <div id="u242_text" class="text ">
-                <p><span style="text-decoration:none;">修改密码</span></p>
+            <div id="u243" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u241二级菜单" style="display:none; visibility: hidden">
+              <div id="u243_div" class=""></div>
+              <div id="u243_text" class="text ">
+                <p><span style="text-decoration:none;">邀请推广</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u243" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u240二级菜单" style="display:none; visibility: hidden">
-              <div id="u243_div" class=""></div>
-              <div id="u243_text" class="text ">
+            <div id="u244" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u241二级菜单" style="display:none; visibility: hidden">
+              <div id="u244_div" class=""></div>
+              <div id="u244_text" class="text ">
                 <p><span style="text-decoration:none;">导出私钥</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u244" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u240二级菜单" style="display:none; visibility: hidden">
-              <div id="u244_div" class=""></div>
-              <div id="u244_text" class="text ">
+            <div id="u245" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u241二级菜单" style="display:none; visibility: hidden">
+              <div id="u245_div" class=""></div>
+              <div id="u245_text" class="text ">
                 <p><span style="text-decoration:none;">导出Keystore</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u245" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u240二级菜单" style="display:none; visibility: hidden">
-              <div id="u245_div" class=""></div>
-              <div id="u245_text" class="text ">
+            <div id="u246" class="ax_default _默认样式 ax_default_hidden" selectiongroup="u241二级菜单" style="display:none; visibility: hidden">
+              <div id="u246_div" class=""></div>
+              <div id="u246_text" class="text ">
                 <p><span style="text-decoration:none;">切换账户</span></p>
               </div>
             </div>
-            <div id="u240" style="display:none; visibility:hidden;"></div>
+            <div id="u241" style="display:none; visibility:hidden;"></div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u247" class="ax_default _默认样式">
+              <div id="u247_div" class=""></div>
+              <div id="u247_text" class="text ">
+                <p><span style="text-decoration:none;">邀请注册</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u248" class="ax_default label">
+              <div id="u248_div" class=""></div>
+              <div id="u248_text" class="text ">
+                <p><span style="text-decoration:none;">已邀请人数</span></p><p><span style="text-decoration:none;"><br></span></p><p><span style="text-decoration:none;">4</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u249" class="ax_default label">
+              <div id="u249_div" class=""></div>
+              <div id="u249_text" class="text ">
+                <p><span style="text-decoration:none;">专属邀请网址</span></p><p><span style="text-decoration:none;">发送给好友</span></p><p><span style="text-decoration:none;">http://223423.com...</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u250" class="ax_default button">
+              <div id="u250_div" class=""></div>
+              <div id="u250_text" class="text ">
+                <p><span style="text-decoration:none;">点击复制</span></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
